# judgment-cli

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/: pull_request_template.md
judgment/: cli.py
judgment/command_utils/: self_host.py
judgment/commands/: self_host.py
judgment/self_host/: create_infra.py
judgment/self_host/aws/: main.tf  plan.tfplan  variables.tf
judgment/self_host/aws/.terraform/modules/: modules.json
judgment/self_host/aws/alb/: lb.tf  lb_listener.tf  lb_listener_certificate.tf  lb_listener_rule.tf  outputs.tf
judgment/self_host/aws/ecs/: ecs_task_definition.tf  outputs.tf  variables.tf
judgment/self_host/aws/iam/: outputs.tf
judgment/self_host/aws/mq/: mq_broker.tf  outputs.tf
judgment/self_host/aws/secretsmanager/: outputs.tf  secretsmanager_secret.tf  variables.tf
judgment/self_host/aws/sg/: variables.tf
judgment/self_host/aws/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
judgment/self_host/aws/terraform/acm/: acm.tf  outputs.tf
judgment/self_host/aws/terraform/alb/: lb.tf  lb_listener.tf  lb_listener_rule.tf  lb_target_group.tf  outputs.tf  variables.tf
judgment/self_host/aws/terraform/ecs/: ecs_cluster.tf  ecs_service.tf  ecs_task_definition.tf  outputs.tf  variables.tf
judgment/self_host/aws/terraform/eventbridge/: eventbridge.tf  outputs.tf  (+1 more)
judgment/self_host/aws/terraform_https_listener/: lb_listener.tf  lb_listener_rule.tf  variables.tf
judgment/self_host/aws/vpc/: network.tf  outputs.tf  vpc.tf
judgment/self_host/supabase/: create_project.py  schema.sql  supabase.py
(+20 files in other folders)
